# tp-backend-9559

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
app/: backend_pre_start.py  db_seed.py  main.py
app/alembic/: env.py
app/alembic/versions/: 33ae56e041c2_add_link_changes_items.py  3b6df2e02eb8_add_column_impacto_to_changes.py  59ed5a121bba_create_cambios_table.py  5a38fb17ecf4_add_column_fecha_cierre_to_problem.py  5c827f3575ce_create_relation_changes_incidents.py  6e227c269e1b_create_incidents_table_and_link_table.py  6f501603269d_create_problems_table_and_relationship_.py  789b8f7fe905_add_solution_column_to_problem.py  859aacecb8ac_add_responsable_id_to_cambios.py  9b1b712605c7_add_appversion_table.py  a530f69e3eb1_create_table_auditoria.py  b5159e816256_create_relation_problemas_incidentes.py  b8156c78c32f_rename_enum_accion_for_operacion.py  c145bc3bb106_create_table_items_configuracion.py  c6065c08f8c7_create_usuarios_table.py  c7a1b264897a_rename_column_in_cambio_incidente_link.py  (+5 more)
app/api/: deps.py  main.py
app/api/routes/: audits.py  (+7 more)
app/core/: db.py  security.py
app/crud/: audits.py  changes.py  config_items.py  incidents.py  problems.py  users.py  utils.py
app/models/: __init__.py  app_version.py  auditoria.py  changes.py  changes_incidents_link.py  changes_items_link.py  changes_problems_link.py  commons.py  config_items.py  incidents.py  incidents_items_link.py  problems.py  problems_incidents_link.py  problems_items_link.py  users.py
app/utils/: config.py  db_seed_generator.py
scripts/: add-revision.sh  generate-random-data.py
tests/: conftest.py
tests/crud/: test_changes.py  test_config_items.py
tests/utils/: utils.py
(+7 files in other folders)
