[project]
name = "backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.114.2,<1.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.4.3,<8.0.0",
    "pre-commit>=3.6.2,<4.0.0",
    "pytest>=7.4.3,<8.0.0",
    "ruff>=0.2.2,<1.0.0",
]
